0.10.0 (2015-??-??)
===================

Backwards Incompatibilities
---------------------------

* Removed unused PipelinePack.Decoded attribute.

Features
--------

* Added support for `write_message` to delete fields when passed nil values.

* Added `replace_dot` setting to StatFilter.

* A protobuf encoding of the current message is now always stored in
  pack.MsgBytes prior to injection into the message router (#265).

* ProtobufEncoder now just copies the pack.MsgBytes into a new byte slice and
  returns that.

* Added Linux CPU Stats Decoder and CPU Stats Filter.

* Added a new sandbox encoder, Schema InfluxDB Write Encoder, which updates
  compatibility of sending data in Heka message fields to InfluxDB 0.9.0+
  write API. It is required to use this encoder when integrating Heka with an
  InfluxDB 0.9.0+ instance as the API to commit metrics has changed.

* Added support for abstract Unix domain sockets to the UdpInput.

* Added support for `can_exit` to inputs (defaults to false, except on
  ProcessDirectoryInput spawned processes where it defaults to true)

Bug Handling
------------

* Fixed visibility of synchronous decoders in reports (#1312).

* More ProcessInput/ProcessDirectoryInput retry logic fixes (#1412 & #1418).

* ProcessInput fixed to no longer leak decoder goroutines when reconfigured
  via ProcessDirectoryInput-driven config changes (#1444).

0.9.2 (2015-??-??)
==================


0.9.1 (2015-03-13)
==================

Features
--------

* Added configurable max_message_size to heka-cat.

* Added `count` setting to TokenSplitter to allow splitting on every Nth
  instance of the given delimiter.

* Added `deliver_incomplete_final` setting to SplitterRunner.

* Added `max_message_size` setting to UdpOutput.

Bug Handling
------------

* Fix the message matcher parser to clear the yySymType structure on each call
  (#1409).

* Protect read_message("raw") from reading an empty pack.MsgBytes (#1405).
