@@ -53,18 +53,19 @@ type Sandbox interface {
 }
 
 type SandboxConfig struct {
-	ScriptType       string `toml:"script_type"`
-	ScriptFilename   string `toml:"filename"`
-	ModuleDirectory  string `toml:"module_directory"`
-	PreserveData     bool   `toml:"preserve_data"`
-	MemoryLimit      uint   `toml:"memory_limit"`
-	InstructionLimit uint   `toml:"instruction_limit"`
-	OutputLimit      uint   `toml:"output_limit"`
-	CanExit          bool   `toml:"can_exit"`
-	Profile          bool
-	Config           map[string]interface{}
-	Globals          *pipeline.GlobalConfigStruct
-	PluginType       string
+	ScriptType           string `toml:"script_type"`
+	ScriptFilename       string `toml:"filename"`
+	ModuleDirectory      string `toml:"module_directory"`
+	PreserveData         bool   `toml:"preserve_data"`
+	MemoryLimit          uint   `toml:"memory_limit"`
+	InstructionLimit     uint   `toml:"instruction_limit"`
+	OutputLimit          uint   `toml:"output_limit"`
+	CanExit              bool   `toml:"can_exit"`
+	TimerEventOnShutdown bool   `toml:"timer_event_on_shutdown"`
+	Profile              bool
+	Config               map[string]interface{}
+	Globals              *pipeline.GlobalConfigStruct
+	PluginType           string
 }
 
 func NewSandboxConfig(globals *pipeline.GlobalConfigStruct) interface{} {
